完成搜索页部分交互以及当前播放歌单和歌曲的全局调整
完成搜索页部分交互以及当前播放歌单和歌曲的全局调整

--- a/common/components/bottom-modal/bottom-modal.wxml
+++ b/common/components/bottom-modal/bottom-modal.wxml
@@ -1,6 +1,6 @@
 <view class="cu-modal bottom-modal {{isShow?'show':''}} bottom-modal-container-class" catchtap="bgTap">
   <view class="cu-dialog modal-container" catchtap="tap">
-    <view class="cu-bar theme-module-color theme-padding modal-title">
+    <view class="cu-bar theme-module-color theme-padding modal-title title-container-class">
       <slot name="title"></slot>
     </view>
     <view style="background-color: #eee;">
