--- a/subpackages-search/pages/search-result/search-result.wxml
+++ b/subpackages-search/pages/search-result/search-result.wxml
@@ -1,4 +1,5 @@
-<wrapper nav-bar-class="theme-module-color" bindgetcontentheight="getContentHeight">
+<wxs src="../../../common/utils/func/tools.wxs" module="tools"/>
+<wrapper nav-bar-class="theme-module-color" bindgetcontentheight="getContentHeight" has-music-list="{{hasMusicList}}" bindmusicplayitemchange="musicPlayItemChangeInner">
   <view slot="nav-bar-left" class="back-icon">
     <i-icon type="return" size="25" color="#888" />
   </view>
@@ -7,6 +8,23 @@
   </view>
   <!--滚动内容区-->
   <view slot="content" class="theme-module-color">
-    <search-tab-card tabTitles="{{tabTitles}}" contentHeight="{{contentHeight}}" />
+    <search-tab-card tabTitles="{{tabTitles}}" contentHeight="{{contentHeight}}" catchtapswitch="tapSwitch" sing-datas="{{singDatas}}"/>
   </view>
 </wrapper>
+<!-- 歌曲底部操作功能弹框 -->
+<bottom-modal isShow="{{showActionModal}}" bindbgtap="hideModal" title-container-class="actions-title-container">
+  <view slot="title" class="flex-column theme-padding song-card-container" style="width:100%">
+    <song-list-item src-url="{{musicInfo.cover}}" topTitle="{{musicInfo.singName}}" bottomTitle="{{musicInfo.singerName}}"/>
+  </view>
+  <view slot="content" class="theme-module-color theme-padding">
+    <view class="action-item" wx:for="{{actions}}" wx:key="id" catchtap="tapAction" data-index="{{index}}">
+      <three-column-bar>
+        <view slot="left" class="action-icon">
+          <i-icon type="{{item.icon}}" color="#666" size="24"/>
+          <text class="commentCount" wx:if="{{item.text=='评论'}}">{{tools.commentCountShow(musicInfo.commentCount)}}</text>
+        </view>
+        <text slot="middle">{{item.text}}</text>
+      </three-column-bar>
+    </view>
+  </view>
+</bottom-modal>
