--- a/common/components/wrapper/wrapper.wxml
+++ b/common/components/wrapper/wrapper.wxml
@@ -20,7 +20,7 @@
   </view>
   <!--底部播放条-->
   <view style="background-color: rgba(253,253,253,1);" class="play-bar-container fixed-element" wx:if="{{mode=='normal' && hasMusicList}}">
-    <play-bar height="108" cover="https://ossweb-img.qq.com/images/lol/web201310/skin/big84000.jpg" bindmusicplayitemchange="musicPlayItemChange"/>
+    <play-bar height="108" cover="https://ossweb-img.qq.com/images/lol/web201310/skin/big84000.jpg" bindmusicplayitemchange="musicPlayItemChange" bindmusiclistchange="musicListChange" />
   </view>
   <!--底部评论条-->
   <view class="comment-bar-container theme-padding fixed-element" wx:if="{{mode=='comment'}}" style="bottom:{{commentInputBarBottom}}px">
