--- a/subpackages-music/pages/music-play/music-play.wxml
+++ b/subpackages-music/pages/music-play/music-play.wxml
@@ -1,5 +1,5 @@
 <wxs src="../../../common/utils/func/tools.wxs" module="tools" />
-<wrapper nav-bar-class="theme-module-color" mode="play" bindmusicplayitemchange="musicPlayItemChangeInner">
+<wrapper nav-bar-class="theme-module-color" mode="play">
   <!--返回按钮-->
   <view slot="nav-bar-left" class="back-icon-container">
     <i-icon type="return" size="25" color="#666" />
@@ -62,37 +62,5 @@
     </view>
   </view>
 </wrapper>
-<!-- 播放歌单列表
-<bottom-modal isShow="{{showSingListModal}}" bindbgtap="hideModal">
-  <view slot="title" class="flex-column list-title-container" style="width:100%">
-    <view class="flex-row title-container">
-      <text class="title-name">当前播放</text>
-      <text class="title-count">({{musicListInfo.musicList.length}})</text>
-    </view>
-    <three-column-bar>
-      <view class="flex-row collect-all-container" slot="middle" bindtap="musicListCollectAllChange">
-        <i-icon type="{{musicListInfo.isCollectAll?'collection_fill':'collection'}}" size="20" color="{{musicListInfo.isCollectAll?themeColor:'#999'}}"/>
-        <text class="collect-all" style="{{musicListInfo.isCollectAll?'color:'+themeColor:''}}">收藏全部</text>
-      </view>
-      <i-icon type="trash " size="20" slot="right" color="#999" bindtap="removeAllListItem"/>  
-    </three-column-bar>
-  </view>
-
-  <view slot="content" class="theme-module-color theme-padding">
-      <scroll-view class="sing-list-container theme-module-color" scroll-y>
-        <view class="sing-item-container" wx:for="{{musicListInfo.musicList}}" wx:key="id" bindtap="tapPlay" data-index="{{index}}">
-          <three-column-bar three-column-bar-middle-class="three-column-bar-middle">
-            <view slot="left" class="flex-row music-status-icon-container" wx:if="{{item.id==musicInfo.id || item.isVip}}">
-              <i-icon type="systemprompt_fill" size="20" color="{{themeColor}}" wx:if="{{item.id==musicInfo.id}}" class="playing-icon"/>
-              <view wx:if="{{item.isVip}}" class="vip-icon">VIP</view>
-            </view>
-            <view slot="middle" class="flex-row sing-and-singer-container">
-              <text class="item-sing-name">{{item.singName}}</text>
-              <text class="item-singer-name">-{{item.singerName}}</text>
-            </view>
-            <i-icon type="close" size="20" slot="right" color="#999" catchtap="removeListItem" data-index="{{index}}"/>
-          </three-column-bar>
-        </view>
-      </scroll-view>
-  </view>
-</bottom-modal> -->
+<!--底部播放列表弹框-->
+<song-list-bottom wx:if="{{showSingListModal}}" show-sing-list-modal="{{showSingListModal}}" bindhidemodal="hideModal" bindmusiclistchange="musicListChange" bindmusicplayitemchange="musicPlayItemChangeInner"/>
