--- a/extend/iview-weapp/modal/index.wxml
+++ b/extend/iview-weapp/modal/index.wxml
@@ -35,6 +35,6 @@
     <i-button long type="ghost" data-index="{{ index }}" bind:click="handleClickItem">
         <view class="i-modal-btn-loading" wx:if="{{ item.loading }}"></view>
         <i-icon wx:if="{{ item.icon }}" type="{{ item.icon }}" i-class="i-modal-btn-icon"></i-icon>
-        <view class="i-modal-btn-text" style="{{ item.color ? 'color: ' + item.color : '' }}">{{ item.name }}</view>
+        <text class="i-modal-btn-text" space style="{{ item.color ? 'color: ' + item.color : '' }}">{{ item.name }}</text>
     </i-button>
 </template>
