--- a/common/components/play-bar/play-bar.wxml
+++ b/common/components/play-bar/play-bar.wxml
@@ -1,5 +1,5 @@
 <!--播放条-->
-<view class="play-bar-container theme-padding play-bar-class" style="height:{{height}}rpx;">
+<view class="play-bar-container theme-padding play-bar-class" style="height:{{height}}rpx;" catchtap="toPlayPage">
   <!--音乐封面-->
   <view class="cover-container" style="width:{{height+10}}rpx;height:{{height+10}}rpx;border-radius:{{height+10}}rpx;">
     <circular-item src="{{musicInfo.cover}}" size="{{height-21}}" circular-item-class="cover-item"/>
