--- a/subpackages-search/pages/search-result/search-result.wxml
+++ b/subpackages-search/pages/search-result/search-result.wxml
@@ -28,3 +28,17 @@
     </view>
   </view>
 </bottom-modal>
+<song-list-action visible="{{showSongListAction}}" wx:if="{{showSongListAction}}" bind:click="collection" actions="{{[{name: '取   消',color:'#fff'},{name: '完   成',color:themeColor}]}}">
+  <view class="theme-padding collect-song-list-container" wx:if="{{showModal=='songListModal'}}">
+    <view class="collect-song-list-item">
+      <collect-song-list-item top-title="新建歌单" src-url="https://ossweb-img.qq.com/images/lol/web201310/skin/big84000.jpg" bindtapitem="addNewSongList"/>
+    </view>
+    <view wx:for="{{selfSongList}}" wx:key="id" class="collect-song-list-item">
+      <collect-song-list-item itemId="{{item.id}}" src-url="{{item.srcUrl}}" top-title="{{item.title}}" bottom-title="{{item.songCount}}首" has-action has-bottom-title catchhandlecheckchange="handleCheckChange"/>
+    </view>
+  </view>
+  
+  <view wx:if="{{showModal=='inputModal'}}" class="song-list-add-new">
+    <input placeholder="输入新建歌单标题" value="{{newSongListName}}" focus bindinput="songListInput" bindconfirm="songListConfirm"/>
+  </view>
+</song-list-action>
