批量歌曲加入歌单交互完成
批量歌曲加入歌单交互完成

--- a/subpackages-search/pages/batch-action-page/batch-action-page.wxml
+++ b/subpackages-search/pages/batch-action-page/batch-action-page.wxml
@@ -14,3 +14,5 @@
     </view>
   </scroll-view>
 </wrapper>
+<!--添加到歌单弹框-->
+<song-list-action-card show-song-list-action="{{showSongListAction}}" musicInfos="{{musicInfos}}"/>
