--- a/common/components/back-button/back-button.wxml
+++ b/common/components/back-button/back-button.wxml
@@ -1,3 +1,3 @@
 <view bindtap="back">
-  <i-icon type="return" size="25" color="#888" />
+  <i-icon type="return" size="25" color="{{color}}" />
 </view>
