--- a/common/components/single-item/single-item.wxml
+++ b/common/components/single-item/single-item.wxml
@@ -1,3 +1,4 @@
+<wxs src="../../utils/func/tools.wxs" module="tools"/>
 <view>
   <three-column-bar>
     <view slot="left" class="single-item-info-container" bindtap="tapPlay">
@@ -12,3 +13,24 @@
     </view>
   </three-column-bar>
 </view>
+
+<!-- 歌曲底部操作功能弹框 -->
+<bottom-modal isShow="{{showActionModal}}" bindbgtap="hideModal" title-container-class="actions-title-container">
+  <view slot="title" class="flex-column theme-padding song-card-container" style="width:100%">
+    <song-list-item src-url="{{cover}}" top-title="{{singName}}" bottom-title="{{singerName}}"/>
+  </view>
+  <view slot="content" class="theme-module-color theme-padding">
+    <view class="action-item" wx:for="{{actions}}" wx:key="id" catchtap="tapAction" data-index="{{index}}">
+      <three-column-bar>
+        <view slot="left" class="action-icon">
+          <i-icon type="{{item.icon}}" color="#666" size="24"/>
+          <text class="comment-count" wx:if="{{item.text=='评论'}}">{{tools.commentCountShow(commentCount)}}</text>
+        </view>
+        <text slot="middle">{{item.text}}</text>
+      </three-column-bar>
+    </view>
+  </view>
+</bottom-modal>
+
+<!--添加到歌单弹框-->
+<song-list-action-card show-song-list-action="{{showSongListAction}}" musicInfos="{{[musicInfo]}}"/>
