--- a/subpackages-search/components/search-tab-card/search-tab-card.wxml
+++ b/subpackages-search/components/search-tab-card/search-tab-card.wxml
@@ -5,7 +5,7 @@
       <!--操作条-->
       <view class="single-title-container">
         <three-column-bar>
-          <view slot="left" class="left-action-container">
+          <view slot="left" class="left-action-container" catchtap="playAllSong">
             <i-icon type="playon_fill" color="{{themeColor}}" size="23" />
             <text class="play-all-text">播放全部</text>
           </view>
@@ -15,7 +15,7 @@
       <!--单曲列表-->
       <view style="margin-top: 40rpx">
         <view class="single-item" wx:for="{{singDatas}}">
-          <single-item catchtapswitch="tapSwitch" item-id="{{item.id}}" sing-name="{{item.singName}}" singer-name="{{item.singerName}}" data-index="{{index}}" bindtapplay="tapPlayMusic" is-vip="{{item.isVip}}"/>
+          <single-item item-id="{{item.id}}" sing-name="{{item.singName}}" singer-name="{{item.singerName}}" data-index="{{index}}" is-vip="{{item.isVip}}" catchmusicplayitemchange="musicplayitemchange" comment-count="{{item.commentCount}}"/>
         </view>
       </view>
     </view>
@@ -25,8 +25,8 @@
     </view>
     <!--歌单-->
     <view slot="tab2" class="song-list-container">
-      <view class="song-list-item" wx:for="{{aa}}">
-        <song-list-item />
+      <view class="song-list-item" wx:for="{{singListDatas}}" wx:key="id" catchtap="tapToDetail" data-id="{{item.id}}">
+        <song-list-item src-url="{{item.srcUrl}}" top-title="{{item.title}}" bottomTitle="{{item.count+'首'}}"/>
       </view>
     </view>
   </tab-card>
