搜索页面互动完成
搜索页面互动完成

--- a/common/components/info-label/info-label.wxml
+++ b/common/components/info-label/info-label.wxml
@@ -1,4 +1,4 @@
 <view class="info-label-container" style="background-color:{{isActive?activeLabelColor:labelColor}}">
   <text class="label-text" style="font-size:{{size}}rpx;color:{{isActive?activeTextColor:textColor}};" bindtap="tapLabel">{{value}}</text>
-  <i-icon type="close" wx:if="{{enabelCancel}}" class="cancel-icon" size="{{size/2}}" bindtap="cancel" />
+  <i-icon type="close" wx:if="{{enabelCancel}}" class="cancel-icon" size="{{size/2}}" catchtap="cancel" />
 </view>
