--- a/subpackages-search/components/search-label-scroll-bar/search-label-scroll-bar.wxml
+++ b/subpackages-search/components/search-label-scroll-bar/search-label-scroll-bar.wxml
@@ -1,15 +1,21 @@
 <view class="search-label-scroll-bar-class">
-  <three-column-bar>
+  <three-column-bar three-column-bar-middle-class="middle-class">
     <text slot="left" class="search-title">{{title}}</text>
     <view slot="middle" class="search-center">
       <!--透明过渡层-->
       <view class="opacity-view opacity-before"></view>
       <scroll-view scroll-x="true" class="search-scroll-container" enable-flex>
-        <view class="search-label label-margin {{index==0?'first-label-margin':''}} {{index==2?'last-label-margin':''}}" wx:for="{{[1,2,3]}}">{{label}}</view>
+        <!-- <view class="search-label label-margin {{index==0?'first-label-margin':''}} {{index==2?'last-label-margin':''}}" wx:for="{{labels}}" wx:key="item">{{item}}</view> -->
+        <info-label wx:for="{{labels}}" size="24" value="{{item}}" wx:key="item" enabel-cancel="{{isMoving}}" catchcancel="cancel" class="search-label label-margin {{index==0?'first-label-margin':''}} {{index==labels.length-1?'last-label-margin':''}}" catchtaplabel="taplabel"/>
       </scroll-view>
       <!--透明过渡层-->
       <view class="opacity-view opacity-after"></view>
     </view>
-    <i-icon type="trash" slot="right" size="22" color="#999" />
+    <i-icon type="trash" slot="right" size="22" color="#999" wx:if="{{enableRemove && !isMoving}}" catchtap="remove"/>
+    <view wx:if="{{isMoving}}" class="moving-container" slot="right">
+      <text class="all-remove" catchtap="removeAll">全部删除</text>
+      <text class="gap">|</text>
+      <text class="finish" catchtap="finish">完成</text>
+    </view>
   </three-column-bar>
 </view>
