--- a/subpackages-search/pages/search/search.wxml
+++ b/subpackages-search/pages/search/search.wxml
@@ -1,27 +1,27 @@
 <wrapper nav-bar-class="theme-module-color">
   <view slot="nav-bar-left" class="back-icon">
-    <i-icon type="return" size="25" color="#888" />
+    <back-button />
   </view>
   <view slot="nav-bar-middle">
-    <search-bar />
+    <search-bar search-value="{{searchValue}}" catchsearch="search"/>
   </view>
   <!--可滚动内容-->
   <scroll-view scroll-y="true" style="height: 100%" class="theme-module-color" slot="content">
     <!--历史搜索-->
     <view class="theme-margin history-container">
-      <search-label-scroll-bar title="历史" label="天竺鼠车车" />
+      <search-label-scroll-bar title="历史" labels="{{historyLabels}}" enable-remove catchtaplabel="taplabel" catchremovelabel="removeLabel"/>
     </view>
     <!--推荐索搜-->
     <view class="theme-margin recommend-search-container">
-      <search-label-scroll-bar title="推荐" label="good love your love" />
+      <search-label-scroll-bar title="推荐" labels="{{recommendLabels}}" catchtaplabel="taplabel"/>
     </view>
     <!--热门搜索-->
     <view class="theme-margin flex-col hot-search-container">
       <view class="hot-search-title">热搜榜</view>
       <view class="flex-row hot-search-content-container">
-        <view wx:for="{{hotSearch}}" wx:key="id" class="flex-row hot-search-item">
+        <view wx:for="{{hotSearch}}" wx:key="id" class="flex-row hot-search-item" catchtap="tapHotItem" data-value="{{item.searchValue}}">
           <text class="song-sort-id {{index<=2?'song-sort-id-theme-color':'song-sort-id-color'}}">{{index+1}}</text>
-          <text class="song-name one-row-flow" style="font-weight:{{index<=2?'bold':''}}">{{item.songName}}</text>
+          <text class="song-name one-row-flow" style="font-weight:{{index<=2?'bold':''}}">{{item.searchValue}}</text>
         </view>
       </view>
     </view>
